<resources>
    <string name="app_name">MyInventory</string>
    <string name="title_activity_test">Test</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for catalog overflow menu option that deletes all products [CHAR LIMIT=20] -->
    <string name="action_delete_all">Delete all</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor activity that displays the hint for the product name [CHAR LIMIT=20] -->
    <string name="hint_product_name">Name</string>

    <!-- Label for editor activity that displays the quantity TextView [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- Label for editor activity that displays the product TextView [CHAR LIMIT=20] -->
    <string name="product">Product</string>

    <!-- Label for editor activity that displays the OrderProduct TextView [CHAR LIMIT=20] -->
    <string name="order_product">Order product</string>

    <!-- Label for editor activity that displays the text on the order button [CHAR LIMIT=20] -->
    <string name="order">Order</string>

    <!-- Label for catalog activity that displays the product's name [CHAR LIMIT=20] -->
    <string name="product_name">Product name</string>

    <!-- Label for catalog overflow menu that inserts dummy data [CHAR LIMIT=20] -->
    <string name="insert_dummy_data">Insert Dummy Data</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">The inventory is empty</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Activity title text for adding a new product[CHAR LIMIT=50] -->
    <string name="editor_activity_title_new_product">Add new product</string>

    <!-- Activity title text for editing a product[CHAR LIMIT=50] -->
    <string name="editor_activity_title_edit_product">Edit product</string>

    <!-- Toast message in the EditorActivity when update fails -->
    <string name="editor_activity_update_fail">Failed to update the product</string>

    <!-- Toast message in the EditorActivity when update succeeds  -->
    <string name="editor_activity_update_success">Product updated</string>

    <!-- Toast message in the EditorActivity when creating a new product succeeds -->
    <string name="editor_activity_insert_success">New product added</string>

    <!-- Toast message in the EditorActivity when creating a new product fails -->
    <string name="editor_activity_insert_fail">Failed to add a new product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in catalog when all products were successfully deleted [CHAR LIMIT=NONE] -->
    <string name="catalog_delete_products_successful">Products deleted</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="catalog_delete_products_failed">Products fail to delete</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg_catalog">Delete all products?</string>

    <!-- Editor Activity - Out of stock -->
    <string name="out_of_stock">Out of stock?</string>

    <!-- Editor Activity - Alert dialog text when Order button is pressed -->
    <string name="how_many_products">How many products would you want to order?</string>

    <!-- Message displayed in the Editor Activity when the minus button is pressed and the value is below 0 -->
    <string name="cant_go_below_zero">You cannot go below 0</string>

    <!-- Out of stock message to be displayed when the sell button is pressed -->
    <string name="you_are_out_of_stock">You are out of stock</string>

    <!-- Subject of the e-mail from the order intent in the EditorActivity -->
    <string name="intent_order_of">Order of</string>

    <!-- Email body for price from the order intent in the EditorActivity -->
    <string name="intent_price">Price:</string>

    <!-- Email body for name from the order intent in the EditorActivity -->
    <string name="intent_name">Name:</string>
</resources>
